--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,12 +35,13 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
+          path: .
           node-version: ${{ matrix.node-version }}
   
       - name: Build
         run: |
           npm install
-          gulp prod
+          npm run prod
   # Single deploy job since we're just deploying
   deploy:
     environment:
@@ -55,9 +56,6 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
-        with:
-          # Upload entire repository
-          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
