--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          path: .
+          source: ./
+          destination: ./
           node-version: ${{ matrix.node-version }}
   
       - name: Build
