--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,7 +22,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  deploy:
       runs-on: ubuntu-latest
       environment:
         name: github-pages
@@ -37,10 +37,8 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          source: ./
-          destination: ./
           node-version: ${{ matrix.node-version }}
-  
+      
       - name: Build
         run: |
           npm install
